# rrad_xla

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  checkpoint.md  gen_bindings.sh  pyproject.toml
.github/workflows/: pjrt-bindings-refresh.yml  pjrt-ci.yml  qodana_code_quality.yml
expertnal_xla/: pjrt_c_api.h.c
src/: gen_bindings.sh  lib.rs  main.rs  pjrt_bindings.rs  pjrt_loader.rs  pjrt_sys.rs
src/pjrt/: buffer.rs  client.rs  compile.rs  copy_to_device_stream.rs  device.rs  error.rs  event.rs  executable.rs  execute_context.rs  host_to_device_manager.rs  loader.rs  memory.rs  mod.rs  topology_desc.rs
src/rrad_pjrt/: buffer.rs  client.rs  compile.rs  copy_to_device_stream.rs  device.rs  error.rs  event.rs  executable.rs  execute_context.rs  host_to_device_manager.rs  loader.rs  memory.rs  mod.rs  topology_desc.rs  utils.rs
tests/: README.md  abi_layout.rs  common.sh  cpu.rs  pjrt_cpu_runtime.rs  run_jax_plugin_smoke.sh  run_pjrt_cpu_runtime_test.sh  run_pjrt_loader_smoke.sh  wrapper_suite.rs
tests/jax_plugins/rrad_xla_cpu/: __init__.py
tests/python/: jax_plugin_smoke.py
tests/python/jax_plugins/rrad_xla_cpu/: __init__.py
tests/scripts/: common.sh  run_jax_plugin_smoke.sh  run_pjrt_cpu_runtime_test.sh  run_pjrt_loader_smoke.sh
tests/wrapper/: buffer.rs  client.rs  device.rs  event.rs  execute_context.rs  memory.rs  mod.rs  tools.rs  unified.rs
